--- a/scene/one/elephant-conservation-angola/index.html
+++ b/scene/one/elephant-conservation-angola/index.html
@@ -73,17 +73,10 @@
 
         <p class="linebreak">The team started at the source lakes and soon came upon a peatland, which Kerllen Costa describes in <em>Guardians of the River</em>, &ldquo;a marshy layer of decaying plants and mud.&rdquo; Kerllen continues &ldquo;And while satellite images can show the path of a river, nothing but dragging boats across boggy land exposes the landscape.&rdquo; The source lakes in Angola are the water tower for this system. These source lakes are surrounded by vast, high-altitude, high-rainfall Miombo woodlands and &ndash; in-between &ndash; there are sponge-like peatlands, with the whole system flowing into the river.</p>
 
-      </div>
-
-      <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>These peat bogs hold as much as twenty-five times their own dry weight in water before slowly releasing it. [Dr Boyes and his crew] are literally walking on top of the sponge holding the water that eventually floods the Okavango delta.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;<em>Into the Okavango</em> (documentary, 2018)</font></h4>
-      </div>
-
-      <div>
-        <p class="lineend" id="steve-boyes-toggle">Hypothesis: <a class="color" onclick="toggle_steve_boyes();">Termites and mushrooms</a>.</p>
+        <p class="linebreak lineend" id="steve-boyes-toggle">Hypothesis: <a class="color" onclick="toggle_steve_boyes();">Termites and mushrooms</a>.</p>
 
         <div class="clear indent-left-line" id="steve-boyes">
-          <p><font class="color"><em>Termites and mushrooms are the mechanics of the Okavango delta.</em></font></p>
+          <p class="linebreak"><font class="color"><em>Termites and mushrooms are the mechanics of the Okavango delta.</em></font></p>
 
           <p class="linebreak"><em>Termites have constructed millions of porous sand tunnels that fill with water when the delta floods, helping to expand, distribute and absorb the water. The termite mounds themselves also become islands, where sediments and nutrients collect, allowing the area to become a web of waterways, food, and shelter.</em> &mdash;&nbsp;<em>Guardians of the River</em> (2021)</p>
 
@@ -96,11 +89,19 @@
 
       </div>
 
+      <div class="color quote">
+        <h4><font class="color text-quote">&ldquo;</font><em>These peat bogs hold as much as twenty-five times their own dry weight in water before slowly releasing it. [Dr Boyes and his crew] are literally walking on top of the sponge holding the water that eventually floods the Okavango delta.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;<em>Into the Okavango</em> (documentary, 2018)</font></h4>
+      </div>
+
+      <div>
+        <p>A peatland near the source waters was only the beginning.</p>
+
+      </div>
+
       <img alt="" src="../../../inc/img/01/photograph/ng/national-geographic-documentary-films.into-the-okavango.3.jpg" />
       <p class="text-right gutter-side">&ldquo;A raging inferno swept across the floodplains opposite the overnight campsite on the Cuito River.&rdquo; Angola &copy; James Kydd [<a href="../../../url/-com/nationalgeographic-into-the-okavango/" target="_blank" title="National Geographic Documentary Films / Into the Okavango">films.nationalgeographic.com</a>]</p>
 
       <div>
-        <p>A peatland near the source waters was only the beginning.</p>
 
         <p class="linebreak">On that first documented expedition, the team found flames dancing across the peat, turning the land into charred, dried sand. Widespread human-set fires from hunting, slash-and-burn agriculture, and charcoal production now represent one of the greatest threats to the source waters. In the documentary <em>Into the Okavango</em> (2018), Dr Boyes describes trees escaping the fires, &rdquo;now growing into the river, choking it.&ldquo; The expedition found a renewed sense of urgency. There followed a number of wildlife surveys, and after engaging with communities along the river, Kerllen found a more powerful device for inspiring people to take action: <em>a story.</em></p>
 
