--- a/scene/one/elephant-conservation-botswana/index.html
+++ b/scene/one/elephant-conservation-botswana/index.html
@@ -36,6 +36,9 @@
 
   <section>
     <article>
+      <img alt="" src="../../../inc/img/01/photograph/ewb.ele-eyes.jpg" />
+      <p class="text-right gutter-side">Elephant &copy; Elephants Without Borders [<a href="../../../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">elephantswithoutborders.org</a>]</p>
+
       <div>
         <h4 class="letterhead thin">June 2020</h4>
         <h2 class="scene-one">Elephants Without Borders</h2>
@@ -100,24 +103,20 @@
         <h4><font class="color">&ldquo;</font><em>Elephants are an umbrella species. They're ambassadors for conservation, helping to locate and connect key conservation areas in Africa's largest wilderness area.</em><font class="color">&rdquo;</font><font class="color thin"> &mdash;&nbsp;Kelly Landen. (2019) <em>The Last Elephants</em>, &lsquo;Botswana's sanctuary&rsquo; p. 225. Smithsonian Books</font></h4>
       </div>
 
+      <div class="clear">
+        <img alt="" src="../../../inc/img/01/geo/kavango-zambezi.map.information.jpg" />
+        <p class="text-right gutter-side">Kavango-Zambezi [<a href="../../../url/-org/kavangozambezi-about/" rel="noopener" target="_blank" title="Kavango-Zambezi Transfrontier Conservation Area / Tourism Without Borders">kavangozambezi.org</a>, recolored]</p>
+
+      </div>
+
       <div>
         <p>Elephant movements in (and out of) northern Botswana are long-range, temporally complicated, seasonally variable, and closely linked with rainfall.<sup>&nbsp;[<a class="button" onclick="fn();" title="Chase et al., 2005">3</a>]</sup></p>
 
         <p class="linebreak">Elephants numbers in Botswana are in sharp contrast with numbers in Angola, which has fewer than 4,000 elephants in a fertile country almost double the size of Botswana. The contrast is similar with Zambia, which has only around 22,000 elephants. Yet both Zambia and Angola have vast tracks of traditional elephant habitat lying dormant and underutilized. This unbalance holds an answer to any question of whether or not Botswana can sustain its current elephant population.</p>
-      </div>
 
-      <img alt="" src="../../../inc/img/01/geo/kavango-zambezi.map.information.jpg" />
-      <p class="text-right gutter-side">Kavango-Zambezi [<a href="../../../url/-org/kavangozambezi-about/" rel="noopener" target="_blank" title="Kavango-Zambezi Transfrontier Conservation Area / Tourism Without Borders">kavangozambezi.org</a>, recolored]</p>
+        <p class="linebreak">This is where the Kavango-Zambezi Transfrontier Conservation Area initiative comes into the picture. KAZA is an agreement signed by Angola, Botswana, Namibia, Zambia and Zimbabwe, binding these countries to create a transfrontier park straddling their national borders and covering the size of roughly France or Texas. The center of of the area is at the confluence of the Chobe and Zambezi rivers, where the borders of Botswana, Namibia, Zambia and Zimbabwe meet. Chobe National Park, Hwange National Park, the Okavango Delta and Victoria Falls are all contained within the Transfrontier Conservation Area. The vision: &lsquo;to establish a world-class transfrontier conservation and tourism destination in the Okavango and Zambezi river basin regions [&hellip;] within the context of sustainable development.&rsquo; The crux will be whether KAZA stakeholders have the political will to open up ancient elephant corridors to connect the elephants in Botswana to those well-stocked food pantries waiting for them to the north in Nambia, Zambia and Angola. If these corridors can be recreated, it will be a win-win situation for all member countries and their rural communities.</p>
 
-      <div>
-        <p>This is where the Kavango-Zambezi Transfrontier Conservation Area initiative comes into the picture. KAZA is an agreement signed by Angola, Botswana, Namibia, Zambia and Zimbabwe, binding these countries to create a transfrontier park straddling their national borders and covering the size of roughly France or Texas. The center of of the area is at the confluence of the Chobe and Zambezi rivers, where the borders of Botswana, Namibia, Zambia and Zimbabwe meet. Chobe National Park, Hwange National Park, the Okavango Delta and Victoria Falls are all contained within the Transfrontier Conservation Area. The vision: &lsquo;to establish a world-class transfrontier conservation and tourism destination in the Okavango and Zambezi river basin regions [&hellip;] within the context of sustainable development.&rsquo; The crux will be whether KAZA stakeholders have the political will to open up ancient elephant corridors to connect the elephants in Botswana to those well-stocked food pantries waiting for them to the north in Nambia, Zambia and Angola. If these corridors can be recreated, it will be a win-win situation for all member countries and their rural communities.</p>
-      </div>
-
-      <img alt="" src="../../../inc/img/01/photograph/ewb.ele-eyes.jpg" />
-      <p class="text-right gutter-side">Elephant &copy; Elephants Without Borders [<a href="../../../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">elephantswithoutborders.org</a>]</p>
-
-      <div>
-        <h3>Botswana Without Borders</h3>
+        <h3 class="linebreak">Botswana Without Borders</h3>
         <p>By 2007, Michael Chase and Kelly Landen had co-founded Elephants Without Borders (EWB) and managed nearly fifty fitted satellite collars on elephants in northern Botswana, Namibia and Zambia. In 2007, this was the largest telemetry study of elephants. These telemetry studies, coupled with population assessments and trends brought to light in the aerial surveys undertaken by EWB, were used to delineate the boundaries of the Kavango-Zambezi Transfrontier Conservation Area&mdash;the agreement under which Botswana, Namibia, Zambia, Zimbabwe and Angola formally acknowledged that wildlife conservation transcended national boundaries.</p>
 
         <p class="linebreak">By 2011, an aerial survey commissioned by the Botswana department of wildlife and national parks, conceptualized and led by Michael Chase and Kelly Landen of Elephants Without Borders, &ldquo;[made evident] a catastrophic loss of wildlife,&rdquo; according to Chase, eleven species were in serious decline in the delta. The declines were a result of a complex mix of local causes: human encroachment, game fences and poaching, fires and drought and so on. Elephants, however, were bucking the trend. Chase had an explanation:</p>
@@ -134,16 +133,16 @@
         <h4><font class="color">&ldquo;</font><em>The story of Botswana's elephant population has been a bright spot in a sometimes bleak landscape. Outside of Botswana, the African elephant is in crisis. Habitat loss, competition for resources, civil unrest, terrorism, human-wildlife conflict and escalated rates of poaching for ivory threaten their very existence.</em><font class="color">&rdquo;</font><font class="color thin"> &mdash;&nbsp;Kelly Landen, program manager and co-founder of Elephants Without Borders</font></h4>
       </div>
 
-      <div>
-        <p>Botswana-based Elephants Without Borders went on to lead a ground-breaking initiative to survey elephants and animals across Africa. The results of the <a href="../../../url/-org/elephantswithoutborders-great-elephant-census/" title="Elephants Without Borders / Great Elephant Census" target="_blank">Great Elephant Census</a> (GEC) painted a bleak picture of the pan-African situation in 2014: fewer than 400,000 savanna elephants survived in Africa. During the previous seven years, ivory poaching had reduced elephant populations across the continent by 30 per cent. 144,000 elephants. Poaching and human-elephant conflict and habitat loss and climate change are so intense that elephant populations are shrinking by eight per cent each year, continent-wide. 28,000 elephants a year. 76 elephants a day. One elephant every 20 minutes. So it goes.</p>
+      <div class="clear">
+        <img alt="" src="../../../inc/img/01/photograph/ewb.okavango.jpg" />
+        <p class="text-right gutter-side">Okavango &copy; Elephants Without Borders [<a href="../../../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">elephantswithoutborders.org</a>]</p>
 
       </div>
 
-      <img alt="" src="../../../inc/img/01/photograph/ewb.okavango.jpg" />
-      <p class="text-right gutter-side lineend">Okavango &copy; Elephants Without Borders [<a href="../../../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">elephantswithoutborders.org</a>]</p>
-
       <div>
-        <h3 id="don-pinnock-header">Today&hellip; in Botswana</h3>
+        <p>Botswana-based Elephants Without Borders went on to lead a ground-breaking initiative to survey elephants and animals across Africa. The results of the <a href="../../../url/-org/elephantswithoutborders-great-elephant-census/" title="Elephants Without Borders / Great Elephant Census" target="_blank">Great Elephant Census</a> (GEC) painted a bleak picture of the pan-African situation in 2014: fewer than 400,000 savanna elephants survived in Africa. During the previous seven years, ivory poaching had reduced elephant populations across the continent by 30 per cent. 144,000 elephants. Poaching and human-elephant conflict and habitat loss and climate change are so intense that elephant populations are shrinking by eight per cent each year, continent-wide. 28,000 elephants a year. 76 elephants a day. One elephant every 20 minutes. So it goes.</p>
+
+        <h3 class="linebreak" id="don-pinnock-header">Today&hellip; in Botswana</h3>
 
         <p>Once again from his chapter on Botswana in <em>The Last Elephants</em>, &lsquo;Making a safe haven&rsquo;, Colin Bell sets the stage for the state of elephants in Botswana today:</p>
 
@@ -177,9 +176,11 @@
         <p class="linebreak">The decision to lift the ban on hunting elephants was considered popular among rural voters. Today in Botswana, there is indeed a large and stable population of elephants living on the fringe of more and more farmland. Don Pinnock considers the motives for a sudden shift in wildlife policy:</p>
 
         <div>
-          <p>&ldquo;Questions being asked are whether President Masisi's wildlife policy changes are out of genuine concern for the well-being of rural communities and elephants, out of embarrassment at the unanticipated surge in poaching under his watch &ndash; or simply to consolidate votes. It is not clear whether he (or his advisors) fully realise that the high regard in which Botswana is currently held by the international safari tourist market could be irreparably damaged by opening sport hunting of elephants.&rdquo;</p></div>
+          <p>&ldquo;Questions being asked are whether President Masisi's wildlife policy changes are out of genuine concern for the well-being of rural communities and elephants, out of embarrassment at the unanticipated surge in poaching under his watch &ndash; or simply to consolidate votes. It is not clear whether he (or his advisors) fully realise that the high regard in which Botswana is currently held by the international safari tourist market could be irreparably damaged by opening sport hunting of elephants.&rdquo;</p>
 
-        <p class="linebreak">The real solution is to allow these elephants safe passage to past, now underutilized home ranges in Angola, Zambia and Zimbabwe, and safe passage back to Botswana with the change of season. The solution is to protect the wild places in the Kavango-Zambezi area for elephants. This solution calls for a reconsidered land management plan in Caprivi. This solution requires the recreation and preservation of wildlife corridors across Botswana's northern border and throughout managed farmland and so on. This solution has the potential to spark a tourism industry that can benefit local communities with revenue and employment in all five KAZA countries. Today, the future of elephants in Botswana is once again up for debate and this time there is a far reaching implication for the future of elephants in Africa.</p>
+        </div>
+
+        <p>The real solution is to allow these elephants safe passage to past, now underutilized home ranges in Angola, Zambia and Zimbabwe, and safe passage back to Botswana with the change of season. The solution is to protect the wild places in the Kavango-Zambezi area for elephants. This solution calls for a reconsidered land management plan in Caprivi. This solution requires the recreation and preservation of wildlife corridors across Botswana's northern border and throughout managed farmland and so on. This solution has the potential to spark a tourism industry that can benefit local communities with revenue and employment in all five KAZA countries. Today, the future of elephants in Botswana is once again up for debate and this time there is a far reaching implication for the future of elephants in Africa.</p>
 
         <p class="linebreak">We recognize the data collected by EWB as a fundamental support structure for elephant conservation in Botswana and across the continent. <font class="color">Animat Habitat has named <a class="color" href="../../../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">Elephants Without Borders</a> (EWB) as an official selection to receive a percentage of revenue from scene one: <em>White Elephant</em>.</font> This is part of our mission to support wildlife conservation projects on the ground (and in the air) in Africa.</p>
 
