--- a/scene/one/elephant-conservation-kenya/index.html
+++ b/scene/one/elephant-conservation-kenya/index.html
@@ -36,8 +36,6 @@
 
   <section>
     <article>
-      <img alt="" src="../../../inc/img/01/photograph/2016.kenya.ivory-pile.jpg" />
-      <p class="text-right gutter-side">&lsquo;KWS ranger stands guard in Nairobi National Park&rsquo;, 2016</p>
 
       <div>
         <h4 class="letterhead thin">March 2016</h4>
@@ -52,6 +50,12 @@
 
       <div class="color quote">
         <h4><font class="color text-quote">&ldquo;</font><em>A time has come when we must take a stand and the stand is clear. [&hellip;] Kenya is making a statement that for us ivory is worthless unless it is on our elephants. This will send an absolutely clear message that the trade in ivory must come to an end and our elephants must be protected. I trust that the world will join us to end the horrible suffering of our herds and save our elephants for future generations.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Uhuru Kenyatta. (2016) Presidential address. Nairobi, Kenya</font></h4>
+
+      </div>
+
+      <div class="clear">
+        <img alt="" src="../../../inc/img/01/photograph/2016.kenya.ivory-pile.jpg" />
+        <p class="text-right gutter-side">&lsquo;KWS ranger stands guard in Nairobi National Park&rsquo;, 2016</p>
 
       </div>
 
