--- a/scene/one/elephant-conservation-nairobi/index.html
+++ b/scene/one/elephant-conservation-nairobi/index.html
@@ -36,6 +36,9 @@
 
   <section>
     <article>
+      <img alt="" src="../../../inc/img/01/photograph/swt.orphans-line.1.jpg" />
+      <p class="text-right gutter-side">&ldquo;Orphans line.&rdquo; Nairobi Nursery, 2019 &copy; SWT [<a href="../../../url/-org/sheldrickwildlifetrust/" target="_blank" title="Sheldrick Wildlife Trust">sheldrickwildlifetrust.org</a>]</p>
+
       <div>
         <h4 class="letterhead thin">March 2019</h4>
         <h2 class="scene-one">Sheldrick Wildlife Trust</h2>
@@ -68,13 +71,7 @@
 
         <!-- Until this point, however, no milk dependent infant had survived infancy as the composition of suitable milk fats had not yet been discovered. -->
 
-      </div>
-
-      <img alt="" src="../../../inc/img/01/photograph/swt.orphans-line.1.jpg" />
-      <p class="text-right gutter-side">&ldquo;Orphans line.&rdquo; Nairobi Nursery, 2019 &copy; SWT [<a href="../../../url/-org/sheldrickwildlifetrust/" target="_blank" title="Sheldrick Wildlife Trust">sheldrickwildlifetrust.org</a>]</p>
-
-      <div>
-        <p>The Nairobi Nursery provides a safe haven for elephants aged three years and younger, who have lost their mothers, all too often as a result of human activity. Keepers are on hand all day, every day, to ensure recently rescued orphaned elephants have a secure environment in which to grow. After an elephant graduates from the nursery, they are transferred to one of three Sheldrick Wildlife Trust reintegration units: Voi in Tsavo East National Park, Ithumba in Tsavo East National Park, and Umani Springs in Kibwezi Forest &ndash; Chyulu Hills National Park. These units are home to still dependent orphan elephants aged three years and older, who are transitioning to a fully independent life in the wild.</p>
+        <p class="linebreak">The Nairobi Nursery provides a safe haven for elephants aged three years and younger, who have lost their mothers, all too often as a result of human activity. Keepers are on hand all day, every day, to ensure recently rescued orphaned elephants have a secure environment in which to grow. After an elephant graduates from the nursery, they are transferred to one of three Sheldrick Wildlife Trust reintegration units: Voi in Tsavo East National Park, Ithumba in Tsavo East National Park, and Umani Springs in Kibwezi Forest &ndash; Chyulu Hills National Park. These units are home to still dependent orphan elephants aged three years and older, who are transitioning to a fully independent life in the wild.</p>
 
         <p class="linebreak">We helped to foster a young baby elephant when she arrived at the nursery in late 2017. We have followed her rescue and rehabilitation, and have wanted to share her story to show how this project on the ground fits into the big picture of elephant conservation. Here, from Sheldrick Wildlife Trust, the story of an elephant named Kiasa, the sassy tail biter.</p>
 
@@ -357,8 +354,11 @@
 
       </div>
 
-      <iframe src="https://www.youtube.com/embed/mwGErZMe8qw" class="video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <p class="text-right gutter-side">&ldquo;The Sheldrick Trust &ndash; 40 years on.&rdquo; 2017 &copy; SWT</p>
+      <div class="clear">
+        <iframe src="https://www.youtube.com/embed/mwGErZMe8qw" class="video-extra" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p class="text-right gutter-side">&ldquo;The Sheldrick Trust &ndash; 40 years on.&rdquo; 2017 &copy; SWT</p>
+
+      </div>
 
       <div>
         <p>For over 40 years, Sheldrick Wildlife Trust has been a leading conservation organization in East Africa. Sheldrick Wildlife Trust in Kenya are tackling challenges ranging from poaching to habitat destruction, and the orphan elephant rescue and rehabilitation program remains at the heart of their conservation action. The David Sheldrick Wildlife Trust, also known as Sheldrick Wildlife Trust, in the United Kingdom and in the United States (and around the world) promotes educational outreach and public awareness to protect and preserve wildlife and habitats in Kenya for generations to come.</p>
