--- a/scene/one/technology-documentary-big-tuskers/index.html
+++ b/scene/one/technology-documentary-big-tuskers/index.html
@@ -71,16 +71,7 @@
 
         <p class="linebreak">Every now and then, people become evermore desensitized to the ways in which we take advantage of nature, wild or otherwise. This is known as a baseline shift&mdash;a baseline that represents what we think of as normal, which changes with every generation. Enter: director and on-camera co-host of <em>Last of the Big Tuskers</em>, James Currie, who grew up in South Africa, and who returns in this film to see the <em>last</em> big tuskers in <a href="../../../url/git/bigtuskers-tembe-tusker-foundation/" title="Last of the Big Tuskers / Tembe Elephant Park" target="_blank">Tembe Elephant Park</a>.</p>
 
-      </div>
-
-      <div class="clear">
-        <img alt="Last of the Big Tuskers title" src="../../../inc/img/01/title/last-of-the-big-tuskers.title.png" />
-        <p class="text-right gutter-side"><em>Last of the Big Tuskers</em> title lettering &copy; Umboko Productions [<a href="../../../url/git/bigtuskers/" title="Last of the Big Tuskers / A film by James Currie." target="_blank">bigtuskers.com</a>]</p>
-
-      </div>
-
-      <div>
-        <p>Tembe Elephant Park, South Africa, has a unique topography: <em>sandforest</em>. This special sandforest shares a border with Mozambique and holds an elephant population with very special characteristics, as Alois Haberhauer, Elephant Geneticist at the University of Kriel, described in the film: &ldquo;a special genetic makeup to produce strong tuskers.&rdquo; Leonard Muller, Elephant Monitor at Ezemvelo KZN Wildlife, also in the film explained the special circumstances for the elephants in Tembe:</p>
+        <p class="linebreak">Tembe Elephant Park, South Africa, has a unique topography: <em>sandforest</em>. This special sandforest shares a border with Mozambique and holds an elephant population with very special characteristics, as Alois Haberhauer, Elephant Geneticist at the University of Kriel, described in the film: &ldquo;a special genetic makeup to produce strong tuskers.&rdquo; Leonard Muller, Elephant Monitor at Ezemvelo KZN Wildlife, also in the film explained the special circumstances for the elephants in Tembe:</p>
 
         <div>
           <p>&ldquo;From a genetics standpoint [the elephants in Tembe] are quite gifted, [though this has a lot to do] with the history of the area[,] that this must have been a very difficult area to hunt in the peak of the ivory trade, so that would have left a lot of these bulls alone[.] [The elephants in Tembe] were not hunted back then for their ivory. [As a result, there are] a lot more tuskers [per population size in Tembe] than anywhere in South Africa. Even [compared] to a place like [Tsavo National Park], which is a massive park with lots of elephants, they only have a handful of tuskers [per population size.] [This is] something quite special for Tembe.&rdquo;</p>
@@ -92,6 +83,12 @@
 
       <div class="color quote">
         <h4><font class="color text-quote">&ldquo;</font><em>There is mystery behind that masked gray visage and ancient life force, delicate and mighty, awesome and enchanted, commanding the silence ordinarily reserved for mountain peaks, great fires, and the sea.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Peter Matthiessen, <em>The Tree Where Man Was Born</em> (1972)</font></h4>
+      </div>
+
+      <div class="clear">
+        <img alt="Last of the Big Tuskers title" src="../../../inc/img/01/title/last-of-the-big-tuskers.title.png" />
+        <p class="text-right gutter-side"><em>Last of the Big Tuskers</em> title lettering &copy; Umboko Productions [<a href="../../../url/git/bigtuskers/" title="Last of the Big Tuskers / A film by James Currie." target="_blank">bigtuskers.com</a>]</p>
+
       </div>
 
       <div>
