--- a/scene/one/technology-documentary/index.html
+++ b/scene/one/technology-documentary/index.html
@@ -58,20 +58,16 @@
 
       </div>
 
+      <div class="clear">
+        <img alt="VIRUNGA title" src="../../../inc/img/01/title/virunga.ttl3.jpg" />
+        <p class="text-right gutter-side"><em>Virunga</em> title lettering &copy; Grain Media [<a href="../../../url/-org/virunga/" title="Virunga National Park" target="_blank" rel="noopener">virunga.org</a>]</p>
+
+      </div>
+
       <div>
         <p>The narrative in Rumangabo, in particular the story of gorilla caretaker Andre Bauma, is a heartening example of dedication to the endangered gorillas in the circumstance of war. For all the chaos documented in the history of the national park, the heart of the film rests at the gorilla orphanage in Rumangabo. For more about this UNESCO world heritage site and the gorilla orphanage in Rumangabo, see <a href="../../../url/-org/virunga/" title="Virunga National Park" target="_blank" rel="noopener">Virunga National Park</a>.</p>
-      </div>
 
-      <div class="desktop-feature">
-        <div class="clear ptych-center">
-          <img alt="VIRUNGA title" src="../../../inc/img/01/title/virunga.ttl3.jpg" />
-          <p class="text-right"><em>Virunga</em> title lettering &copy; Grain Media [<a href="../../../url/-org/virunga/" title="Virunga National Park" target="_blank" rel="noopener">virunga.org</a>]</p>
-        </div>
-
-      </div>
-
-      <div>
-        <p>The opening titles for the film strike a visual tone that resonates throughout the score as well as the composition of documentary footage and nature cinematography. The film is scored by Patrick Jonsson, and features an original song &ldquo;<a href="../../../url/yt/iJ9WXvPhTrs/" title="We Will Not Go by J. Ralph Feat. Salif Keita, Youssou Ndour, Fally Ipupa" target="_blank" rel="noopener">We Will Not Go</a>&ldquo; composed by J. Ralph (featuring Salif Keita, Youssou Ndour and Fally Ipupa). The original song serves as a bookend, underscoring the themes in the opening of the film, then repeating over the end credits and recalling the events of the film. The torn and colorful look of the opening titles, designed by Framestore, directly supports the theme of a war-torn history in Congo as well as reflects the vibrant culture and spirit of its subjects: the Congolese. The pattern of colors applied within the title lettering, of course, is the national flag of the Democratic Republic of Congo.</p>
+        <p class="linebreak">The opening titles for the film strike a visual tone that resonates throughout the score as well as the composition of documentary footage and nature cinematography. The film is scored by Patrick Jonsson, and features an original song &ldquo;<a href="../../../url/yt/iJ9WXvPhTrs/" title="We Will Not Go by J. Ralph Feat. Salif Keita, Youssou Ndour, Fally Ipupa" target="_blank" rel="noopener">We Will Not Go</a>&ldquo; composed by J. Ralph (featuring Salif Keita, Youssou Ndour and Fally Ipupa). The original song serves as a bookend, underscoring the themes in the opening of the film, then repeating over the end credits and recalling the events of the film. The torn and colorful look of the opening titles, designed by Framestore, directly supports the theme of a war-torn history in Congo as well as reflects the vibrant culture and spirit of its subjects: the Congolese. The pattern of colors applied within the title lettering, of course, is the national flag of the Democratic Republic of Congo.</p>
 
         <p class="linebreak">The film, directed by Orlando von Einsiedel, combines investigative journalism and nature documentary in a gripping expos&eacute; of the realities of life in the Congo. The film documents corruption and imposition of <em>big</em> oil companies, namely SOCO, as well as other <em>big</em> interests, such as electronics industries, on an otherwise historically undermined but good natured people who have seen some benefit from tourism driven to the park. Despite claiming in June 2014 that they would halt operations, SOCO had refused to withdraw unconditionally from Virunga by the release of the film.<sup>&nbsp;[<a class="button" onclick="fn();" title="Ramsey, 2017.">1</a>]</sup></p>
 
@@ -106,16 +102,7 @@
 
         <p>Leo narrates, &ldquo;It sounded like some nightmarish science-fiction film, except everything [Gore] said is real and it's happening right now.&rdquo; The documentary looks at: &ldquo;how far we have gone, how much damage we have caused, and if there is anything we can do to stop it.&rdquo; The film serves as a wake up call. In this way, the intent is similar to <em>Virunga</em> (2014): to inform as well as to give hope that action can create change for the better, before it becomes too late.</p>
 
-      </div>
-
-      <div class="clear">
-        <img alt="Before the Flood banner" src="../../../inc/img/01/title/national-geographic.before-the-flood.banner.jpg" />
-        <p class="text-right gutter-side"><em>Before the Flood</em> title image &copy; National Geographic Documentary Films [<a href="../../../url/-com/beforetheflood/" title="Before the Flood (documentary film, 2016)" target="_blank" rel="noopener">beforetheflood.com</a>]</p>
-
-      </div>
-
-      <div>
-        <p><em>Before the Flood</em> (2016) is again similar to <em>Virunga</em> (2014) in the way its narrative conflict vilifies fossil fuel interests: in this case, namely the Koch brothers who have financed an echo chamber of climate change denialism. In an interview in the film, professor of Atmospheric Science at Penn State University, Michael E. Mann brings this corruption into question: &ldquo;These people are engaged in an effort to lead us astray &ndash; in the name of short term fossil fuel profits &ndash; so that we end up leaving behind a degraded planet. What could be more immoral than that?&rdquo;<sup>&nbsp;[<a class="button" onclick="fn_2();" title="Mann">3</a>]</sup></p>
+        <p class="linebreak"><em>Before the Flood</em> (2016) is again similar to <em>Virunga</em> (2014) in the way its narrative conflict vilifies fossil fuel interests: in this case, namely the Koch brothers who have financed an echo chamber of climate change denialism. In an interview in the film, professor of Atmospheric Science at Penn State University, Michael E. Mann brings this corruption into question: &ldquo;These people are engaged in an effort to lead us astray &ndash; in the name of short term fossil fuel profits &ndash; so that we end up leaving behind a degraded planet. What could be more immoral than that?&rdquo;<sup>&nbsp;[<a class="button" onclick="fn_2();" title="Mann">3</a>]</sup></p>
 
         <p class="linebreak"><em>Before the Flood</em> (2016) is a closer look at the activities, &ldquo;which drove mankind out of the Garden of Eden.&rdquo; The film shares a personal story of shifting baselines, relating back to a motif of religious art: <em>The Garden of Earthly Delights</em> (1490-1510)&mdash;the modern name given to a triptych oil painting on oak panels painted by Hieronymus Bosch. The triptych is read from left to right, with each panel being essential to the meaning of the whole. The left panel depicts a paradise&mdash;a scene in the Garden of Eden. The right panel illustrates a hell&mdash;a scene in which humans have succumbed to temptations. The scene is set at night, and the natural beauty that adorned the preceding panels is noticeably absent. This final panel strikes a tone in harsh contrast with the earlier two. The central panel&mdash;the panel Bosch called: <em>Human Kind Before the Flood</em>, depicts the expansive garden that gives the triptych its name. Art historians have debated whether the central panel is a moral warning or a panorama of paradise lost. The film shows both are true in the experience of Leonardo di Caprio, <em>and it's happening right now</em>.</p>
 
@@ -140,6 +127,12 @@
 
       <div class="color quote">
         <h4><font class="color text-quote">&ldquo;</font><em>After 21 years of debates and conferences, it is time to declare: no more talk, no more excuses, no more ten-year studies, no more allowing the fossil fuel companies to manipulate and dictate the science and policies that affect our future. The world is now watching.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Leonardo di Caprio, messenger of peace at Paris climate accord signing ceremony, New York City, New York (2016)</font></h4>
+      </div>
+
+      <div class="clear">
+        <img alt="Before the Flood banner" src="../../../inc/img/01/title/national-geographic.before-the-flood.banner.jpg" />
+        <p class="text-right gutter-side"><em>Before the Flood</em> title image &copy; National Geographic Documentary Films [<a href="../../../url/-com/beforetheflood/" title="Before the Flood (documentary film, 2016)" target="_blank" rel="noopener">beforetheflood.com</a>]</p>
+
       </div>
 
       <div>
@@ -207,18 +200,18 @@
         <h4><font class="color text-quote">&ldquo;</font><em>Fencing development is the future when you look at Africa. There is no choice involved, it is going to happen, and people of Africa want the same things that everyone else wants. They want to be able to have a TV. They want to have a house, which is not knocked over. They want to be able to store their food in an area where an animal does not get in there and finish it. Internet, which no one really has yet, and without it, these guys are never going to agree to living with wildlife unless they get the best of both worlds.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Craig Miller, head of security at Big Life Foundation. <em>The Ivory Game</em> (2016)</font></h4>
       </div>
 
-      <div class="clear">
-        <img alt="The Ivory Game lockup" src="../../../inc/img/01/title/netflix.the-ivory-game.lockup.png" />
-        <p class="text-right gutter-side"><em>The Ivory Game</em> lockup &copy; Vulcan Productions [<a href="../../../url/-com/theivorygame/" title="The Ivory Game (documentary film, 2016)" target="_blank" rel="noopener">theivorygame.com</a>]</p>
-
-      </div>
-
       <div>
         <p>The original score as well as the graphical overlays underpin the three story lines throughout the documentary. The score features a soundtrack by <a href="../../../url/www/hscottsalinas-the-ivory-game/" title=">H. Scott Salinas / The Ivory Game" target="_blank" rel="noopener">H. Scott Salinas</a>, which breaks away from an investigative tone and into passages of sweeping orchestral music that pair with the parts of the film nearer to nature documentary. The graphical overlays &ndash; also the graphics for the <a href="../../../url/vimeo/191002515/" title="Vimeo / Kaiserlicht / The Ivory Game - Title Sequence" target="_blank" rel="noopener">Title Sequence</a> &ndash; were created by <a href="../../../url/www/kaiserlicht-the-ivory-game/" title="Kaiserlicht / The Ivory Game" target="_blank" rel="noopener">Kaiserlicht</a>. The opening title sequence references footage of ivory stockpiles exhibited toward the end of the film. The sequence was directed to echo the ivory trade route, visualizing various maps of countries sculpted into the raw ivory tusks. The opening of the film establishes a material context as well as geographical context for the film., which places an emphasis on the global impact of &ndash; as well as global responsibility for &ndash; the ivory trade.</p>
       </div>
 
       <div class="color quote">
         <h4><font class="color text-quote">&ldquo;</font><em>Are we really &ndash; in our generation &ndash; going to allow the biggest mammal on Earth to disappear. Losing elephants from Africa is just a slow erosion of humanity. Then what is next: we are going to lose the rhino, we are going to lose the giraffe, we are going to lose the lion. Suddenly, we are going to have an empty world &ndash; full of people &ndash; but nothing wild. [&hellip;] We need to build fences, we need to put in water, and just managing elephants costs money. And, yes, it is a national responsibility but it is actually a global responsibility. The world wants elephants.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Iain Craig, director of conservation at Northern Rangelands Trust. <em>The Ivory Game</em> (2016)</font></h4>
+      </div>
+
+      <div class="clear">
+        <img alt="The Ivory Game lockup" src="../../../inc/img/01/title/netflix.the-ivory-game.lockup.png" />
+        <p class="text-right gutter-side"><em>The Ivory Game</em> lockup &copy; Vulcan Productions [<a href="../../../url/-com/theivorygame/" title="The Ivory Game (documentary film, 2016)" target="_blank" rel="noopener">theivorygame.com</a>]</p>
+
       </div>
 
       <div>
