--- a/scene/one/elephant-conservation-amboseli/index.html
+++ b/scene/one/elephant-conservation-amboseli/index.html
@@ -36,6 +36,9 @@
 
   <section>
     <article>
+      <img alt="" src="../../../inc/img/01/photograph/nick-brandt/2008.amboseli.elephants-walking-through-grass.219114.jpg" />
+      <p class="text-right gutter-side">&ldquo;Elephants Walking Through Grass&rdquo; Amboseli, 2008 (Leading matriarch killed by poachers, 2009) &copy; Nick Brandt [<a href="../../../url/-com/nickbrandt/" target="_blank" title="Nick Brandt">nickbrandt.com</a>]</p>
+
       <div>
         <h4 class="letterhead thin">June 2019</h4>
         <h2 class="scene-one">Big Life Foundation</h2>
@@ -88,26 +91,15 @@
         <p>Imagine that you are an African farmer who earns maybe a few thousand dollars in a year from your crops and you discover a big bull elephant trampling through, destroying your very livelihood in just one night. You might be very tempted to throw that spear that protects your ability to feed your family. This is why Big Life has patrol vehicles out every night, patrolling the land where farmland meets wildlife habitat. Big Life also supplies thunder flashes &ndash; harmless noisy pyrotechnics &ndash; to farmers to help them deter elephants, and prevent damage to their crops. And Big Life has seen success: crop raiding has declined, though not by enough. Even on a continent the size of Africa, every day, humans and wild animals are competing for space as farmland and development encroach further upon the wild places.</p>
 
         <p class="linebreak">Settlers have planted crops on ancient migratory routes, and staked their livelihood on what used to be prime elephant habitat. From the perspective of the settlers, the elephants run rampant: eating their way through maze fields, knocking down houses, and trampling on people. From the perspective of the elephants, the settlers are in the way: turning migratory routes and elephant habitat into farmlands that either block passage or come close enough to naturally entice the elephants to forage. As humans expand relentlessly into what was once wilderness, there is ever-more likelihood of conflict with wildlife.</p>
-      </div>
 
-      <img alt="" src="../../../inc/img/01/photograph/nick-brandt/2008.amboseli.elephants-walking-through-grass.219114.jpg" />
-      <p class="text-right gutter-side">&ldquo;Elephants Walking Through Grass&rdquo; Amboseli, 2008 (Leading matriarch killed by poachers, 2009) &copy; Nick Brandt [<a href="../../../url/-com/nickbrandt/" target="_blank" title="Nick Brandt">nickbrandt.com</a>]</p>
-
-      <div>
-        <h3>Elephant-Human Conflict</h3>
+        <h3 class="linebreak">Elephant-Human Conflict</h3>
         <p>Imagine that you are an African elephant who walks maybe a few hundred miles along parched stream beds to water and grassland, and along the way you come across a maze field. You remember that your family has walked this way for generations, and maybe you remember that this maze field was not a maze field not that long ago. The landscape has changed: the maze is here now. The maze smells ripe now. This field is the sweetest thing that you have smelled for miles. You are dehydrated and starved, and you feast on the food in front of you and &ndash; for a moment &ndash; all is well. All of a sudden, shrieks! Thunder flashes follow. Worse: gunshots. Creatures with spears that slither in the dark. The kind of creatures that have killed elephants before, maybe elephants who you once knew. You run rampant. You are a wild elephant.</p>
 
         <p class="linebreak">Increasing human-wildlife conflict in the ecosystem is a direct result of wildlife and local communities competing for limited resources on the same shrinking land areas.</p>
 
         <p class="linebreak">There are no winners of this conflict. Everyone loses.</p>
 
-      </div>
-
-      <img alt="" src="../../../inc/img/01/photograph/nick-brandt/2011.amboseli.line-of-rangers-with-tusks-of-killed-elephants.219252.jpg" />
-      <p class="text-right gutter-side">&ldquo;Line of Rangers with Tusks of Killed Elephants&rdquo; Amboseli, 2011 &copy; Nick Brandt [<a href="../../../url/-com/nickbrandt/" target="_blank" title="Nick Brandt">nickbrandt.com</a>]</p>
-
-      <div>
-        <h3>Wildlife Corridors</h3>
+        <h3 class="linebreak">Wildlife Corridors</h3>
         <p>Elephants like vanilla, and do not like bees. This is a relationship with forest habitats, and an evolved mechanism that helps to protect certain trees. Conservationists have worked with farmers to apply this knowledge in East Africa. Vanilla has been used to encourage elephants to follow new paths along manmade wildlife corridors. Bees have been kept along fences to detract elephants from raiding maze fields and farmlands. Elephant conservationists have used this natural fear to benefit the elephants by placing beehives near farms in order to prevent elephants from foraging in those areas. This approach seems to be helping to minimize incidents of human-elephant conflict.<sup>&nbsp;[<a class="button" onclick="fn();" title="Dupuis-D&eacute;sormeaux and Macdonald, 2012">3</a>,&nbsp;<a class="button" onclick="fn();" title="King, 2018">4</a>]</sup></p>
 
         <p class="linebreak">These are two wonderful examples of measures taken to manage the effects of human expansion on elephant habitat. Big Life continues to focus on innovative conservation solutions, continues to establish rapid-response units dedicated to move elephants away from farmlands, and continues to invest in crop-protection fences to deter elephants from entering farmed areas in the first place.</p>
@@ -124,7 +116,7 @@
         <h3>Across The Ravaged Land</h3>
         <p>The photography of Nick Brandt from his time in Amboseli speaks for itself, with each portrait speaking of a character in a story with an ending that gave life to Big Life Foundation. These photographs are collected in a trilogy of books documenting the disappearing animals of East Africa, altogether titled: <em>On This Earth, A Shadow Falls Across The Ravaged Land</em>. In the third and final volume, Nick returned to Amboseli for the first time in two years. This time, when he approached, Nick wrote in an essay on conservation, &ldquo;what had once been some of the most relaxed of elephant herds [&hellip;] they would run in terrified panic.&rdquo; This essay introduced the final volume of his trilogy: <em>Across The Ravaged Land</em>, and his words speak to the foundation of Big Life:</p>
 
-        <div>
+        <div class="clear-bottom">
           <p>&ldquo;Day by day, we tried to approach what had once been some of the most relaxed of elephant herds, elephants that in the past had quietly made their daily journey to the swamps, moving past and around our vehicle without a care in the world. But this time, when we approached to within half a mile, they would run in terrified panic. Meanwhile, gunshots were being reported from the direction that the elephants came, near the Tanzanian border.&rdquo;</p>
 
           <p class="linebreak">&ldquo;We tried reporting what we'd seen, but nothing was done, nothing happened. The Kenya Wildlife Service was (and still is) underfunded, and the few NGOs in the area had insufficient funds and infrastructure to make much of a difference. On the Tanzanian side, there was no one at all engaged in protection or conservation.&rdquo;</p>
@@ -135,7 +127,13 @@
 
         </div>
 
-        <p class="linebreak">Since its foundation in 2010, Big Life has pioneered wildlife conservation on the ground and in publication. Big Life in Kenya (and Tanzania) has a network of community rangers, mostly Maasai &ndash; the heart of conservation in this region is a partnership with the Maasai, who are traditionally a pastoralist society &ndash; Big Life community rangers actively protect the land by fighting against habitat destruction such as illegal logging or charcoaling, and are expertly trained to tackle a variety of wildlife crimes. Big Life in Canada, in the US and in the UK (and around the world) has campaigned in support of wildlife in East Africa with a story of success based on the strength of partnerships with local communities and embodied in the striking photography of co-founder Nick Brandt.</p>
+      </div>
+
+      <img alt="" src="../../../inc/img/01/photograph/nick-brandt/2011.amboseli.line-of-rangers-with-tusks-of-killed-elephants.219252.jpg" />
+      <p class="text-right gutter-side">&ldquo;Line of Rangers with Tusks of Killed Elephants&rdquo; Amboseli, 2011 &copy; Nick Brandt [<a href="../../../url/-com/nickbrandt/" target="_blank" title="Nick Brandt">nickbrandt.com</a>]</p>
+
+      <div>
+        <p>Since its foundation in 2010, Big Life has pioneered wildlife conservation on the ground and in publication. Big Life in Kenya (and Tanzania) has a network of community rangers, mostly Maasai &ndash; the heart of conservation in this region is a partnership with the Maasai, who are traditionally a pastoralist society &ndash; Big Life community rangers actively protect the land by fighting against habitat destruction such as illegal logging or charcoaling, and are expertly trained to tackle a variety of wildlife crimes. Big Life in Canada, in the US and in the UK (and around the world) has campaigned in support of wildlife in East Africa with a story of success based on the strength of partnerships with local communities and embodied in the striking photography of co-founder Nick Brandt.</p>
 
         <p class="linebreak">We recognize the partnership of Big Life Foundation with local communities in East Africa as a leading example for elephant conservation at a time when elephant conservation across the continent has appeared most bleak. <font class="color">Animat Habitat has named <a class="color" href="../../../url/-org/biglife/" target="_blank" title="Big Life Foundation">Big Life Foundation</a> as an official selection to receive a percentage of revenue from this project, scene one: <em>White Elephant</em>.</font> This is part of our mission to support wildlife conservation projects on the ground in Africa.</p>
 
